--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
