--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
+    "jquery": "^3.6.0",
     "sass": "^1.45.1"
   }
 }
