--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-minify": "^3.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^5.0.0",
